@@ -16,8 +16,16 @@ from importlib import import_module
 
 from docutils.utils import normalize_language_tag
 
-class LanguageImporter(object):
 
+class LanguageImporter(object):
+    """Import language modules.
+
+    When called with a BCP 47 language tag, instances return a module
+    with localisations from `docutils.languages` or the PYTHONPATH.
+
+    If there is no matching module, warn (if a `reporter` is passed)
+    and fall back to English.
+    """
     packages = ('docutils.languages.', '')
     warn_msg = ('Language "%s" not supported: '
                 'Docutils-generated text will be in English.')
@@ -27,21 +35,22 @@ class LanguageImporter(object):
     def __init__(self):
         self.cache = {}
 
-    def import_from_packages(self, name):
+    def import_from_packages(self, name, reporter=None):
         """Try loading module `name` from `self.packages`."""
-        try:
-            return self.cache[name]
-        except KeyError:
-            pass
+        module = None
         for package in self.packages:
             try:
                 module = import_module(package+name)
                 self.check_content(module)
             except (ImportError, AttributeError):
+                if reporter and module:
+                    reporter.info('%s is no complete Docutils language module.'
+                                  %module)
+                elif reporter:
+                    reporter.info('Module "%s" not found.'%(package+name))
                 continue
-            self.cache[name] = module
-            return module
-        return None
+            break
+        return module
 
     def check_content(self, module):
         """Check if we got a Docutils language module."""
@@ -57,21 +66,18 @@ class LanguageImporter(object):
             pass
         for tag in normalize_language_tag(language_code):
             tag = tag.replace('-', '_') # '-' not valid in module names
-            module = self.import_from_packages(tag)
+            module = self.import_from_packages(tag, reporter)
             if module is not None:
-                return module
-        if reporter is not None:
-            reporter.warning(self.warn_msg % language_code)
-        module = self.import_from_packages('en')
-        self.cache[tag] = module # warn only one time!
+                break
+        else:
+            if reporter:
+                reporter.warning(self.warn_msg % language_code)
+            if self.fallback:
+                module = self.import_from_packages(self.fallback)
+        if reporter and (language_code != 'en'):
+            reporter.info('Using %s for language "%s".'%(module, language_code))
+        self.cache[language_code] = module
         return module
 
 
 get_language = LanguageImporter()
-"""Return module with language localizations
-
-from `docutils.languages` or the PYTHONPATH.
-
-The argument `language_code` is a "BCP 47" language tag.
-If there is no matching module, warn and fall back to English.
-"""
